# FidoDbus-MasterProjekt

./: .gitignore  README.md  install  uninstall
code/: Makefile  org.mp.fido.xml  setup
code/client/: Makefile  fido.cpp  fido.h
code/libwebauthn-bridge/: Cargo.toml
code/libwebauthn-bridge/src/: bridge.rs  ffi.rs  lib.rs  pin.rs  structures.rs  utils.rs
code/pyclient/: Fido1Proxy.py  client.py
code/server/: server.cpp  server.h  webauthn.h
