[package]
name = "libwebauthn-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.80"
dbus = "0.9.7"
gtk = "0.18.1"
hidapi = "2.6.1"
tokio = "1.37.0"
xdg-credentials-portal = {path = "../xdg-credentials-portal/libwebauthn"}
dialog = "0.3.0"
rand = "0.8.5"
tracing-subscriber = "0.3.18"
text_io = "0.1.12"
dbus-crossroads = "0.5.2"
dbus-tree = "0.9.2"
zbus = "4.2.2"
async-std = "1.12.0"
event-listener = "5.3.1"
serde = "1.0.203"
serde_cbor = "0.11.2"
serde_bytes = "0.11.14"
libc = "0.2.155"
serde_json = "1.0.120"
